[gd_scene load_steps=11 format=3 uid="uid://b3f01ru3rq0f3"]

[ext_resource type="Script" path="res://objects/altar.gd" id="1_lcqav"]
[ext_resource type="Texture2D" uid="uid://bbk1jssoclq2u" path="res://assets/altar-removebg-preview.png" id="2_7iyw5"]
[ext_resource type="Texture2D" uid="uid://cr1203spmbv3" path="res://assets/Item__71.png" id="3_ngukh"]
[ext_resource type="AudioStream" uid="uid://bsxdj6do18f4k" path="res://assets/sounds/suprise.wav" id="4_8tx3g"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1n8en"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uf06d"]
size = Vector2(102, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qd51l"]
size = Vector2(55, 43)

[sub_resource type="Animation" id="Animation_e6twv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chatIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -30)]
}

[sub_resource type="Animation" id="Animation_5djxa"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chatIcon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -25), Vector2(0, -30), Vector2(0, -25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gvuv"]
_data = {
"RESET": SubResource("Animation_e6twv"),
"bounce": SubResource("Animation_5djxa")
}

[node name="Altar" type="RigidBody2D"]
z_index = 3
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 15
physics_material_override = SubResource("PhysicsMaterial_1n8en")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_lcqav")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -46)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_7iyw5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_uf06d")

[node name="chatIcon" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, -30)
texture = ExtResource("3_ngukh")

[node name="altarBoundary" type="Area2D" parent="."]
position = Vector2(-1.25, -21)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="altarBoundary"]
position = Vector2(1.25, 11.5)
shape = SubResource("RectangleShape2D_qd51l")

[node name="chatIconAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2gvuv")
}
autoplay = "bounce"

[node name="surpriseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8tx3g")

[connection signal="body_entered" from="altarBoundary" to="." method="_on_altar_boundary_body_entered"]
[connection signal="body_exited" from="altarBoundary" to="." method="_on_altar_boundary_body_exited"]
